[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "pefile>=2023.2.7",
    "python-magic>=0.4.27",
    "pyshark>=0.6",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14"]

[tool.setuptools]
packages = ["triage"]

[tool.setuptools.package-data]
triage = ["py.typed"]
